--- a/styles.css
+++ b/styles.css
@@ -265,15 +265,21 @@ html, body {
 }
 
 .icons-body .icon {
+  position: relative;
   width: 55px;
   height: 55px;
-  /* background:  rgba(255, 255, 255, 0.7); */
+  flex-direction: column; 
   margin: 10px;
   cursor: pointer;
   border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 0.8em;
+  back
+}
+.icons-body .icon span {
+  margin-top: 7px;
 }
 
 .icons-body .icon img {
